[package]
name = "tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = [ "v4" ] }
im = "15.1.0"
# lyn = "0.1.0"
unicode-xid = "0.2.4"
